--- a/HappyHour/Base.lproj/Main.storyboard
+++ b/HappyHour/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6V8-0s-6Ye">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="115" width="320" height="453"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="7hc-6K-lbB" style="IBUITableViewCellStyleDefault" id="id6-4a-isa">
@@ -45,11 +45,18 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Pfd-is-scb"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Michigan Cocktail Compass" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOg-qd-28J">
+                                <rect key="frame" x="20" y="28" width="280" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="6V8-0s-6Ye" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="1Os-9Y-7Gu"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6V8-0s-6Ye" secondAttribute="bottom" id="EAn-mz-JFd"/>
+                            <constraint firstItem="6V8-0s-6Ye" firstAttribute="top" secondItem="NOg-qd-28J" secondAttribute="bottom" constant="5" id="GQz-JP-nxL"/>
+                            <constraint firstItem="NOg-qd-28J" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="J2B-5L-u0j"/>
                             <constraint firstItem="6V8-0s-6Ye" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="kse-kM-nQO"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6V8-0s-6Ye" secondAttribute="trailing" constant="-20" id="yyM-Eo-w9G"/>
                         </constraints>
